# jr-recommender-api

./: Dockerfile  README.md  pyproject.toml  requirements.txt  test.ipynb  training_with_tune.py
.gitea/workflows/: ci.yaml
.github/workflows/: ci.yaml
api/: main.py
frontend/: package-lock.json
frontend/jr-recommender-frontend/: .env  index.html  package-lock.json  package.json
frontend/jr-recommender-frontend/src/: App.jsx  index.css
models/artifacts/: category_map.pkl  customer_profiles.pkl  encoders.pkl  model_info.json  product_features.pkl  recommender.pkl
scripts/: create_model_bundle.py  demo.py  test_complete_pipeline.py
src/data_ingestion/: data_loader.py  data_preprocessor.py  data_validator.py
src/evaluation/: metrics.py  model_comparison.py
src/features/: customer_features.py  feature_matrix_builder.py  product_features.py  training_data_builder.py
src/inference/: base_predictor.py  cold_start.py  recommender_predictor.py
src/models/: base_model.py  baseline_models.py  lightgbm_ranker.py  xgboost_ranker.py
src/training/: data_splitter.py  trainer.py
src/tuning/: hyperparameter_tuning.py  model_tuning_strategy.py
