[project]
name = "data-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery>=1.10.2",
    "dbt-core>=1.10.13",
    "fastapi>=0.121.0",
    "google-auth>=2.42.1",
    "google-cloud-bigquery>=3.38.0",
    "imblearn>=0.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "numpy>=2.3.4",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pandas-gbq>=0.29.2",
    "pydantic-settings>=2.11.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.1",
]
